HTML base implementation

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,16 @@
     <title>Card Generator</title>
   </head>
   <body>
-    
-    <!-- Add Your Code Here -->
 
+    <!-- Card -->
+     <div class="container">
+      <div class="card">
+        <div class="card-top">9</div>
+        <div class="card-center">hards</div>
+        <div class="card-bottom">9</div>
+      </div>
+      <button class="button" onclick="shuffleCards()">Shuffle Cards</button>
+     </div>
 
     <script src="./js/script.js"></script>
   </body>
